15:changes from part 14